--- a/D1D34614E.opf/index.yml
+++ b/D1D34614E.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   104a00a75d44408f83c705bb80f89c42:
     parts: {}
+    work_id: D4400
     span:
-    - vol: 116
+    - base: f07a
       start: 0
       end: 2935
-    work_id: D4400
